--- a/style.css
+++ b/style.css
@@ -30,12 +30,57 @@ nav a {
 	text-decoration: none;
 
 }
+
+
+main{
+
+	width: 940px;
+	margin: 0 auto;
+}
+
+form{
+	margin:40px 0 ;
+}
+
+form label, form legend {
+	display:block;
+	font-size: 20px;
+	margin: 0 0 10px;
+}
+
+.input-padrao {
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px 25px;
+	width: 50%;
+}
+
+.checkbox{
+	margin: 20px 0;
+}
+.enviar{
+	width: 40%;
+	padding: 15px 0;
+	background: red;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
+}
+.enviar:hover{
+	background: darkred;
+	transform: scale(1.1);
+
+}
 footer{
 	text-align: center;
 	padding: 90px 0;
 }
 .copyrigth {
-	color: #FFFFFF;
+	color: #000000;
 	background: #4682B4;
 	font-size: 15px;
 	margin: 15px 0 0;
